<resources>
    <string name="app_name">Sirius</string>
    <string name="dota_2_is_a">Dota 2 is a multiplayer online battle arena (MOBA) game which has two teams of five players compete to collectively destroy a large structure defended by the opposing team known as the "Ancient", whilst defending their own.</string>
    <string name="strategy">STRATEGY</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="moba">MOBA</string>
    <string name="review_rati">Review &amp; Ratings</string>
    <string name="dota_2">DoTA 2</string>
    <string name="m">70M</string>
    <string name="install">Install</string>
    <string name="some_id">4.9</string>
    <string name="name1">Auguste Conte</string>
    <string name="name2">Jang Marcelino</string>
    <string name="m_reviews">70M Reviews</string>
    <string name="february_14">February 14, 2019</string>
    <string name="review">"Once you start to learn its secrets, there a wild and exciting variety of play here that unmatched, even by its peers."</string>
</resources>