<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050B18"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:background="#150606"
        android:elevation="5dp"
        android:fontFamily="@font/skmodernist_regular"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_16" />

    <androidx.cardview.widget.CardView
        android:id="@+id/image_logo"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="300dp"
        android:backgroundTintMode="multiply"
        app:cardBackgroundColor="#292F3C"
        app:cardCornerRadius="14dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/dark_back">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#050B18"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="12dp">

            <RatingBar
                android:id="@+id/ratingBar2"
                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:contentDescription="@string/app_name"
                android:elevation="1dp"
                android:foregroundTint="#008F6A6A"
                android:isIndicator="false"
                android:numStars="5"
                android:progressTint="#F4D144"
                android:rating="5"
                android:stepSize="0.5"
                app:layout_constraintEnd_toEndOf="@+id/textViewGame"
                app:layout_constraintStart_toStartOf="@+id/textViewGame"
                app:layout_constraintTop_toBottomOf="@+id/textViewGame" />

            <RatingBar
                android:id="@+id/ratingBar1"
                style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/app_name"
                android:elevation="1dp"
                android:foregroundTint="#008F6A6A"
                android:isIndicator="false"
                android:numStars="5"
                android:progressTint="#F4D144"
                android:rating="5"
                android:stepSize="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textViewRatingNum"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textViewRatingNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/skmodernist_bold"
                android:text="@string/some_id"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/skmodernist_regular"
                android:text="@string/review_rati"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDesc" />

            <TextView
                android:id="@+id/textViewNumOfReviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="132dp"
                android:fontFamily="@font/skmodernist_regular"
                android:gravity="center"
                android:text="70M Reviews"
                android:textColor="#A8ADB7"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/ratingBar1"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textViewRatingNum"
                app:layout_constraintTop_toBottomOf="@id/ratingBar1"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textViewMoba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="108dp"
                android:background="@drawable/rectanglecorners"
                android:fontFamily="@font/skmodernist_regular"
                android:text="@string/moba"
                android:textColor="#44A9F4"
                app:layout_constraintEnd_toStartOf="@+id/ratingBar2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMultiPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="108dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rectanglecorners"
                android:fontFamily="@font/skmodernist_regular"
                android:text="@string/multiplayer"
                android:textColor="#44A9F4"
                app:layout_constraintEnd_toStartOf="@+id/textViewStrategy"
                app:layout_constraintStart_toEndOf="@+id/textViewMoba"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewStrategy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="108dp"
                android:layout_marginEnd="108dp"
                android:background="@drawable/rectanglecorners"
                android:fontFamily="@font/skmodernist_regular"
                android:text="@string/strategy"
                android:textColor="#44A9F4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"

                android:fontFamily="@font/skmodernist_regular"
                android:text="@string/dota_2_is_a"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMultiPlayer" />

            <TextView
                android:id="@+id/textViewGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/skmodernist_bold"

                android:text="DoTA 2"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.356"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="77dp"
                android:text="70M"
                android:textColor="#45454D"
                app:layout_constraintBottom_toTopOf="@+id/textViewDesc"
                app:layout_constraintStart_toEndOf="@+id/textViewGame"
                app:layout_constraintTop_toBottomOf="@+id/textViewGame"
                app:layout_constraintVertical_bias="0.024" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRatingNum"
                app:srcCompat="@drawable/pic1" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/skmodernist_regular"
                android:text="@string/name1"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/textViewRatingNum" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"

                android:fontFamily="@font/skmodernist_regular"
                android:text="@string/february_14"
                android:textColor="#66FFFFFF"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/skmodernist_regular"
                android:text="@string/review"
                android:textColor="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/skmodernist_bold"
        android:text="@string/install"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        android:textAllCaps="false"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65592635" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:adjustViewBounds="false"
        android:backgroundTint="#47FFFFFF"
        android:clickable="true"
        app:backgroundTint="#47FBFBFB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_back"
        app:tint="@null"
        app:useCompatPadding="false"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        app:backgroundTint="#47FBFBFB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_addition"
        app:tint="@null"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>